# Homework2

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_class_category_py.html  z_145eef247bfb46b6_class_product_py.html
src/: class_category.py  class_product.py
tests/: test_class_category.py  test_class_product.py
